파일 삭제후 수정